<resources>
    <string name="app_name">FlashCards</string>
    <string name="txtChoose">Choose Your Language</string>
    <string name="questionMark">\?</string>
    <string name="lulani">Lulani</string>
    <string name="euskara">Euskara</string>
    <string name="教育漢字">教育漢字</string>
    <string name="japanese">日本語</string>
    <string name="tokipona">Toki Pona</string>
    <string name="arabic"> العَرَبِية‎‎ </string>
    <string name="finnish">Suomi</string>
    <string name="german">Deutsch</string>
    <string name="mohawk">Kanien’kéha</string>
    <string name="search">Search</string>
    <string name="full">Full</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="anywhere">Anywhere</string>
    <string name="egyptian">Egyptian</string>
    <string name="firstimage">firstImage</string>
    <string name="Aleph">Ꜣ</string>
    <string name="Ayin">Ꜥ</string>
    <string name="Beth">B</string>
    <string name="Daleth">D</string>
    <string name="Faa">F</string>
    <string name="Ge">G</string>
    <string name="Hbreve">Ḫ</string>
    <string name="Hdot">Ḥ</string>
    <string name="Heh">H</string>
    <string name="Hline">H̱</string>
    <string name="Jar">Ḏ</string>
    <string name="Kup">K</string>
    <string name="Mem">M</string>
    <string name="Nun">N</string>
    <string name="Pe">P</string>
    <string name="Qoph">Q</string>
    <string name="Resh">R</string>
    <string name="Samekh">S</string>
    <string name="Shin">Š</string>
    <string name="Tav">T</string>
    <string name="Tchek">Ṯ</string>
    <string name="Wuw">W</string>
    <string name="Yii">Y</string>
    <string name="Yod">I͗</string>
    <string name="Zayin">Z</string>
</resources>
