<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ryan.flashcards.LanguageSelectionScreen"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtChoose"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:id="@+id/chooseLanguage"
        android:paddingBottom="50dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chooseLanguage"
        android:id="@+id/scrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:text="@string/lulani"
                android:id="@+id/buttonLulani"
                android:onClick="selectLanguage"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:text="@string/egyptian"
                android:id="@+id/buttonEgyptian"
                android:onClick="selectLanguage"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:text="@string/euskara"
                android:id="@+id/buttonEuskara"
                android:onClick="selectLanguage"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:text="@string/japanese"
                android:id="@+id/buttonJapanese"
                android:onClick="selectLanguage"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:text="@string/教育漢字"
                android:id="@+id/buttonKanji"
                android:onClick="selectLanguage"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:text="@string/tokipona"
                android:id="@+id/buttonTokipona"
                android:onClick="selectLanguage"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:text="@string/mohawk"
                android:id="@+id/buttonMohawk"
                android:onClick="selectLanguage"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:text="@string/arabic"
                android:id="@+id/buttonArabic"
                android:onClick="selectLanguage"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:text="@string/german"
                android:id="@+id/buttonGerman"
                android:onClick="selectLanguage"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:text="@string/finnish"
                android:id="@+id/buttonFinnish"
                android:onClick="selectLanguage"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
